# RPSgame

./: CMakeLists.txt  frequencies  mainwindow.cpp  mainwindow.h
